k8s/recommender-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommender
  namespace: course-suggestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommender
  template:
    metadata:
      labels:
        app: recommender
    spec:
      containers:
        - name: recommender
          image: georgi02/course-recommender:latest
          ports:
            - containerPort: 5000
